// Original file: src/protos/user.proto

import type { MonthData as _user_package_MonthData, MonthData__Output as _user_package_MonthData__Output } from '../user_package/MonthData';

export interface UserAnalyticsRes {
  'data'?: (_user_package_MonthData)[];
}

export interface UserAnalyticsRes__Output {
  'data'?: (_user_package_MonthData__Output)[];
}
